# VoIPC

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile.release  README.md  android-build.sh  build.ps1  build.sh  bundle-libs.sh  channels.example.json  dev.ps1  dev.sh  keystore.properties.example  release.sh  setup.ps1  setup.sh
.cargo/: config.toml
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.svelte  app.css  main.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: app_state.rs  commands.rs  config.rs  crypto.rs  global_keys.rs  lib.rs  main.rs  network.rs
client/src-tauri/src/screenshare/: linux.rs  mod.rs  windows.rs
client/src/lib/: sounds.ts  types.ts
client/src/lib/components/: ChannelList.svelte  ChatHistorySetup.svelte  ChatPanel.svelte  ConnectDialog.svelte  Icons.svelte  InvitePopup.svelte  MobilePTT.svelte  PasswordPrompt.svelte  PokePopup.svelte  ReconnectOverlay.svelte  ScreenShareControls.svelte  ScreenSharePopout.svelte  ScreenShareSourcePicker.svelte  ScreenShareViewer.svelte  SettingsPanel.svelte  StatusBar.svelte  Toast.svelte  UserList.svelte  VoiceControls.svelte
client/src/lib/stores/: channels.ts  chat.ts  connection.ts  invites.ts  notifications.ts  platform.ts  pokes.ts  screenshare.ts  settings.ts  users.ts  voice.ts
crates/voipc-audio/: Cargo.toml
crates/voipc-audio/src/: capture.rs  decoder.rs  denoise.rs  device.rs  encoder.rs  jitter.rs  lib.rs  mixer.rs  playback.rs  vad.rs
crates/voipc-crypto/: Cargo.toml
crates/voipc-crypto/src/: group.rs  identity.rs  lib.rs  media_keys.rs  persistence.rs  prekey.rs  session.rs  stores.rs
crates/voipc-protocol/: Cargo.toml
crates/voipc-protocol/src/: codec.rs  error.rs  lib.rs  messages.rs  types.rs  video.rs  voice.rs
crates/voipc-server/: Cargo.toml
crates/voipc-server/examples/: test_client.rs
crates/voipc-server/src/: channels.rs  config.rs  main.rs  settings.rs  state.rs  tcp.rs  ts3_bridge.rs  udp.rs
crates/voipc-video/: Cargo.toml
crates/voipc-video/src/: android_decoder.rs  convert.rs  decoder.rs  encoder.rs  lib.rs
website/: index.html
