[package]
name = "voipc-client"
version.workspace = true
edition = "2021"

[lib]
name = "voipc_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
voipc-protocol = { path = "../../crates/voipc-protocol" }
voipc-audio = { path = "../../crates/voipc-audio" }
voipc-video = { path = "../../crates/voipc-video" }
voipc-crypto = { path = "../../crates/voipc-crypto" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bytes = "1"
ringbuf = "0.4"
ring = "0.17"
base64 = "0.22"
turbojpeg = "1.3"
rand = "0.8"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.67.2" }
socket2 = "0.6.2"
rdev = "0.5"
rodio = { version = "0.19", default-features = false, features = ["symphonia-mp3", "symphonia-wav", "symphonia-vorbis"] }
rfd = "0.15"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
pipewire = "0.8"
evdev = "0.12"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { workspace = true }
windows = { version = "0.58", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }
