[package]
name = "voipc-audio"
version.workspace = true
edition.workspace = true

[dependencies]
voipc-protocol = { workspace = true }
audiopus = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ringbuf = "0.4"
nnnoiseless = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6", features = ["java-interface"] }
