[package]
name = "voipc-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "voipc-server"
path = "src/main.rs"

[dependencies]
voipc-protocol = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = "6"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
zeroize = { version = "1", features = ["derive"] }
socket2 = "0.6.2"

[dev-dependencies]
